--- a/validator/templates/base.html
+++ b/validator/templates/base.html
@@ -42,6 +42,9 @@
             <a class="navbar-brand" href="{% url 'validator:input' %}">Design Validator</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item me-2">
+                        <a class="nav-link btn btn-outline-light text-white btn-sm px-3 fw-bold" href="{% url 'validator:generate' %}">🎨 Design to Code</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'validator:list' %}">History</a>
                     </li>
